<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Candy Dice</string>
    <string name="lollipops">Lollipops</string>
    <string name="_0">0</string>
    <string name="_3_of_a_kind">3 of a Kind&#160;&#160;&#160;&#160;&#160;&#160;+10</string>
    <string name="sm_straight">Sm Straight&#160;&#160;+20</string>
    <string name="full_house">Full House&#160;&#160;&#160;&#160;&#160;+25</string>
    <string name="_4_of_a_kind">4 of a Kind&#160;&#160;&#160;&#160;&#160;&#160;+30</string>
    <string name="lg_straight">Lg Straight&#160;&#160;+40</string>
    <string name="yahtzee_50">Yahtzee!&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;+50</string>
    <string name="gumdrops">Gumdrops</string>
    <string name="reset">New Game!</string>
</resources>
